:construction: :lipstick: #2 `버스킹 홍보` 페이지 > 정적 UI 화면 구현 중

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,20 @@
-@import 'tailwindcss';
+/* globals.css */
+@layer base, mantine, tailwind;
+
+@layer base {
+  /* TailwindCSS의 기본 스타일 */
+  @import 'tailwindcss';
+}
+
+@layer mantine {
+  /* Mantine의 스타일 */
+  @import '@mantine/core/styles.layer.css';
+}
+
+@layer tailwind {
+  /* TailwindCSS의 컴포넌트 및 유틸리티 스타일 */
+  @import 'tailwindcss';
+}
 
 html {
   height: 100%;
